# PG2PLplot

./: CMakeLists.txt  Doxyfile  README
CMake/: CMakeLocations.cmake  CompilerFlags.cmake  CompilerFlags_Fortran.cmake  FileList.cmake  FindPLplot.cmake  SetCompileOptions.cmake
doc/: ChangeLog.txt
src/: PG2PLplot.f90  pg2plplot.f90  rgb.txt
